--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .env/
 node/ 
-.DS_Store/
+.DS_Store
+dist/
+my-first-react-app/
+build/
+.vscode/
+.idea/
+*.log
+*.tmp
+coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
